# sanguosha-zhongduanban

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEEP_IMPROVEMENT_PLAN.html  DEVELOPER_EXECUTION_PLAN.md  Dockerfile  GAMEPLAY_IMPROVEMENTS.md  IMPROVEMENTS_REPORT.md  IMPROVEMENT_PLAN.md  MSIX_README.md  PROJECT_OVERVIEW.html  PROJECT_ROADMAP.md  README.md  WARP.md  bug_report.txt  build.bat  build.py  build_msix.py  coverage.xml  docker-compose.yml  find_zh.py  logging_config.py  main.py  pyproject.toml  requirements.txt  rich_demo.py  test_issues_found.txt  test_report.txt  versioning.py  项目深度剖析与焕新计划.docx  项目深度剖析与焕新计划.md
.github/workflows/: ci.yml  release.yml
ai/: __init__.py  bot.py  decision_log.py  easy_strategy.py  hard_strategy.py  normal_strategy.py  strategy.py
data/: card_effects.json  cards.json  heroes.json  heroes_new.json  skill_config.json  skill_dsl.json
docs/: 2026-03-project-audit-and-renewal-plan-zh-en.md  CARD_COVERAGE.md  CARD_COVERAGE_MAP.md  CODE_REVIEW_REPORT.md  CODE_REVIEW_SKILL.md  SECURITY_AUDIT.md  architecture.md  architecture_renovation_plan.md  release-process.md  tls_setup.md
docs/superpowers/plans/: 2026-04-08-controller-discard-async.md  2026-04-08-controller-game-over-async.md  2026-04-08-controller-hero-selection-async.md  2026-04-08-controller-play-card-log-async.md  2026-04-08-controller-skill-log-async.md  2026-04-08-controller-turn-phase-async.md  2026-04-08-core-runtime-controller-io.md  2026-04-08-domain-request-skill-routing.md
docs/superpowers/specs/: 2026-03-11-identity-mode-content-sync-design.md  2026-04-08-deep-refactor-design.md
game/: __init__.py  actions.py  card.py  card_handlers.py  card_resolver.py  combat.py  config.py  constants.py  context.py  damage_system.py  distance_cache.py  engine.py  engine_event_logging.py  engine_phase_helpers.py  engine_setup_helpers.py  engine_turn_helpers.py  enums.py  equipment_system.py  events.py  exceptions.py  game_controller.py  hero.py  judge_system.py  match_history.py  phase_fsm.py  player.py  player_manager.py  replay.py  request_handler.py  save_system.py  skill.py  skill_dsl.py  skill_interpreter.py  skill_plugin.py  skill_resolver.py  turn_manager.py  win_checker.py
game/effects/: __init__.py  base.py  basic.py  data_driven.py  registry.py  trick.py
game/runtime/: __init__.py  controller_io.py  play_phase.py  session.py  startup.py  turns.py
game/skills/: __init__.py  qun.py  registry.py  shu.py  wei.py  wu.py
i18n/: __init__.py  en_US.json  en_US.py  zh_CN.json  zh_CN.py
net/: __init__.py  action_codec.py  client.py  client_session.py  models.py  protocol.py  rate_limiter.py  request_codec.py  security.py  server.py  server_dispatcher.py  server_session.py  server_types.py  session.py  settings.py
tests/: test_accessibility.py  test_action_metadata.py  test_action_path_consistency.py  test_actions_coverage.py  test_all_player_counts.py  test_auto_battle.py  test_auto_battle_stress.py  test_build_msix.py  test_build_script.py  test_card_effects_data.py  test_card_handlers.py  test_combat.py  test_config_validation.py  test_config_warnings.py  test_coverage_boost.py  test_damage_system.py  test_data_driven_effects.py  test_deck_validation.py  test_dependency_metadata.py  test_distance_cache.py  test_effects_coverage.py  test_engine_room_setup.py  test_equipment_effects.py  test_events.py  test_events_async.py  test_exceptions.py  test_fuzz.py  test_game.py  test_game_controller_coverage.py  test_game_integration.py  test_huogong.py  test_i18n.py  test_identity_sync_ai.py  test_identity_sync_heroes.py  test_identity_sync_state.py  test_integration.py  test_juunzheng.py  test_main_connect_cli_integration.py  test_main_connect_url.py  test_main_server_cli_integration.py  (+35 more)
tests/property/: test_card_properties.py  test_combat_properties.py  test_deck_properties.py  test_distance_properties.py  test_eventbus_properties.py  test_player_properties.py
tools/: log_config.py  profiling.py  replay.py
ui/: __init__.py  ascii_art.py  input_safety.py  protocol.py  rich_ui.py  terminal.py
ui/textual_ui/: __init__.py  app.py  bridge.py
ui/textual_ui/modals/: __init__.py  base.py  card_pick_modal.py  discard_modal.py  identity_reveal_modal.py  multi_target_modal.py  response_modal.py  suit_modal.py  target_modal.py  wuxie_modal.py
ui/textual_ui/screens/: __init__.py  game_over.py  game_play.py  game_play_helpers.py  game_setup.py  hero_select.py  main_menu.py  rules.py
ui/textual_ui/styles/: game.tcss
ui/textual_ui/themes/: __init__.py
ui/textual_ui/widgets/: __init__.py  card_widget.py  equipment_slots.py  hand_row.py  hp_bar.py  phase_indicator.py  play_area.py  player_panel.py
