[project]
name = "sanguosha"
version = "1.0.0"
description = "三国杀命令行终端游戏"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Sanguosha Team"}
]
keywords = ["game", "card-game", "three-kingdoms", "sanguosha"]

dependencies = [
    "colorama>=0.4.4",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
sanguosha = "main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# Black 配置
[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | __pycache__
    | dist
    | build
    | \.venv
    | venv
)/
'''

# isort 配置
[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["game", "ai", "ui", "tools"]
skip = [".git", "__pycache__", "dist", "build", ".venv", "venv"]
skip_glob = ["*/__pycache__/*"]

# Ruff 配置 (替代 flake8)
[tool.ruff]
line-length = 100
target-version = "py38"
exclude = [
    ".git",
    "__pycache__",
    "dist",
    "build",
    ".venv",
    "venv",
    "*.pyc",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "W191",   # indentation contains tabs
    "E402",   # module level import not at top of file (needed for some imports)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py are OK
"tests/*" = ["B011"]      # assert in tests is OK

# MyPy 配置
[tool.mypy]
python_version = "3.9"
warn_return_any = false  # 简化警告
warn_unused_configs = true
disallow_untyped_defs = false  # 逐步启用
check_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = false  # 允许隐式Optional
exclude = [
    "dist",
    "build",
    "venv",
    ".venv",
    "__pycache__",
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# Pytest 配置
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

# Coverage 配置
[tool.coverage.run]
source = ["game", "ai", "ui"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
