[project]
name = "sanguosha"
version = "4.1.1"
description = "三国杀命令行终端游戏"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Sanguosha Team"}
]
keywords = ["game", "card-game", "three-kingdoms", "sanguosha"]

dependencies = [
    "rich>=13.0.0",
    "textual>=0.40.0",
    "websockets>=12.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-randomly>=3.15.0",
    "hypothesis>=6.100.0",
    "ruff>=0.8.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "pyinstaller>=5.0.0",
]

[project.scripts]
sanguosha = "main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["game", "ai", "ui", "net", "i18n"]

# Ruff 配置 (统一替代 Black + isort + flake8)
[tool.ruff]
line-length = 100
target-version = "py310"
src = [".", "game", "ai", "ui", "net", "tools"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort (替代 isort 工具)
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade (自动升级旧语法)
    "SIM",    # flake8-simplify
    "N",      # pep8-naming (命名规范)
    "D",      # pydocstyle (文档字符串规范)
]
ignore = [
    "E501",   # line too long (由 ruff format 处理)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "W191",   # indentation contains tabs
    "E402",   # module level import not at top of file
    "D100",   # missing docstring in public module (渐进启用)
    "D102",   # missing docstring in public method (渐进启用)
    "D103",   # missing docstring in public function (渐进启用)
    "D104",   # missing docstring in public package
    "D105",   # missing docstring in magic method
    "D107",   # missing docstring in __init__
    "D205",   # blank line after summary (渐进启用)
    "D203",   # conflicts with D211 (one-blank-line-before-class)
    "D213",   # conflicts with D212 (multi-line-summary-second-line)
    "N802",   # function name lowercase (部分中文项目方法名)
    "N806",   # variable in function should be lowercase
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "D104"]  # unused imports and missing docstring in __init__.py are OK
"tests/*.py" = ["B011", "D", "N"]     # tests: relaxed docstring and naming rules
"tests/**/*.py" = ["B011", "D", "N"]  # nested tests: same relaxed rules
"i18n/en_US.py" = ["N999"]            # locale module naming keeps language-region style
"i18n/zh_CN.py" = ["N999"]            # locale module naming keeps language-region style

[tool.ruff.lint.pydocstyle]
convention = "google"  # 使用 Google 风格 docstring

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

# MyPy 配置
[tool.mypy]
python_version = "3.10"
warn_return_any = false          # 渐进启用，先收敛核心类型错误
warn_unused_configs = true
disallow_untyped_defs = false   # 渐进启用
check_untyped_defs = false      # 渐进启用
ignore_missing_imports = true
no_implicit_optional = true    # 禁止隐式Optional
strict_equality = true
exclude = [
    "dist",
    "build",
    "venv",
    ".venv",
    "__pycache__",
    "sanguosha_backup_*",
]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true            # 测试层先不阻塞全量类型检查

[[tool.mypy.overrides]]
module = "ui.*"
ignore_errors = true            # UI 层渐进启用

[[tool.mypy.overrides]]
module = "tools.*"
ignore_errors = true            # 工具脚本先不阻塞主流程

[[tool.mypy.overrides]]
module = [
    "ai.*",
    "game.actions",
    "game.card_handlers",
    "game.card_resolver",
    "game.combat",
    "game.engine",
    "game.exceptions",
    "game.game_controller",
    "game.judge_system",
    "game.skill_interpreter",
    "game.skills.*",
]
ignore_errors = true            # 动态/历史模块较多，分批收敛类型债务

# Pytest 配置
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

# Coverage 配置
[tool.coverage.run]
source = ["game", "ai", "ui", "net"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "game/context.py",
    # UI 层需要 Textual Pilot 集成测试，暂排除以免拉低覆盖率
    "ui/textual_ui/modals/*",
    "ui/textual_ui/widgets/*",
    "ui/textual_ui/screens/game_play.py",
    "ui/textual_ui/screens/hero_select.py",
    "ui/textual_ui/bridge.py",
    "ui/input_safety.py",
]

[tool.coverage.report]
fail_under = 60  # 渐进目标：UI Pilot 测试完成后逐步上调至 75%
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
